Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8173955/MessageForInterfaceTest.out
MessageForInterfaceTest.java:8:8: compiler.err.class.public.should.be.in.file: kindname.interface, MessageForInterfaceTest_
1 error
