Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8173955/MessageForInterfaceTest.java
/*
 * @test  /nodynamiccopyright/
 * @bug 8174027
 * @summary error message should adapt to the corresponding top level element
 * @compile/fail/ref=MessageForInterfaceTest.out -XDrawDiagnostics MessageForInterfaceTest.java
 */

public interface MessageForInterfaceTest_ {}
